# unifi-api-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: do_scrape.yml
scripts/: do_scrape.py
src/unifiapipy/: __init__.py  main.py
src/unifiapipy/data/: collection_payloads.json
tests/: test_integration.py
